--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,9 +11,7 @@ jobs:
     strategy:
       matrix:
         # Use these Java versions
-        java: [
-          21,    # Current Java LTS
-        ]
+        java: [21]
     runs-on: ubuntu-22.04
     steps:
       - name: checkout repository
